--- a/public/signout/resources/styles/style.css
+++ b/public/signout/resources/styles/style.css
@@ -18,7 +18,7 @@
     
 .x-splash-icon {
         /* Important required due to the loading symbols CSS selector */
-        background-image: url('../images/cupola-real-png.png') !important;
+        /*background-image: url('../images/cupola-real-png.png') !important;*/
         margin-top: -30px;
         margin-bottom: 10px;
 }
